metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/becquerel_sms_send_event__x.object-meta.xml
<CustomObject>
    <description>becquerel__sms_send_event</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__sms_send_event</externalName>
    <label>becquerel__sms_send_event</label>
    <pluralLabel>becquerel__sms_send_event</pluralLabel>
</CustomObject>