metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <externalDeveloperName>Thumbtack_User_ID</externalDeveloperName>
    <label>Account</label>
    <length>50</length>
    <referenceTargetField>Account.usr_user_id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Send Event</relationshipLabel>
    <relationshipName>becquerel_sms_send_event</relationshipName>
    <type>IndirectLookup</type>
</CustomField>