metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/Create_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Time__c</fullName>
    <description>Create_Time</description>
    <externalDeveloperName>Create_Time</externalDeveloperName>
    <label>Create_Time</label>
    <type>DateTime</type>
</CustomField>