metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Direction</description>
    <externalDeveloperName>Direction</externalDeveloperName>
    <label>Direction</label>
    <length>128</length>
    <type>Text</type>
</CustomField>