metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <description>From_Number</description>
    <externalDeveloperName>From_Number</externalDeveloperName>
    <label>From_Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>