metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message</description>
    <externalDeveloperName>Message</externalDeveloperName>
    <label>Message</label>
    <length>128</length>
    <type>Text</type>
</CustomField>