metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/PARTITIONTIME__c.field-meta.xml
<CustomField>
    <fullName>PARTITIONTIME__c</fullName>
    <description>PARTITIONTIME</description>
    <externalDeveloperName>PARTITIONTIME</externalDeveloperName>
    <label>PARTITIONTIME</label>
    <type>DateTime</type>
</CustomField>