metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/Thumbtack_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Thumbtack_User_ID__c</fullName>
    <description>Thumbtack_User_ID</description>
    <externalDeveloperName>Thumbtack_User_ID</externalDeveloperName>
    <label>Thumbtack_User_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>