metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <description>To_Number</description>
    <externalDeveloperName>To_Number</externalDeveloperName>
    <label>To_Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>