metadata-sfdx/force-app/main/default/objects/becquerel_sms_send_event__x/fields/Twilio_ID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_ID__c</fullName>
    <description>Twilio_ID</description>
    <externalDeveloperName>Twilio_ID</externalDeveloperName>
    <label>Twilio_ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>